--- a/sass/blocks/_activity.scss
+++ b/sass/blocks/_activity.scss
@@ -26,7 +26,10 @@
         white-space: nowrap;
         overflow: hidden;
         margin-right: auto;
-        margin-left: 12px;
+    }
+
+    &__done {
+        margin-right: 8px;
     }
 
     &__icon {
@@ -65,7 +68,7 @@
         align-items: stretch;
         padding: 16px;
         gap: 16px;
-        box-shadow: 0px 0px 8px 2px rgba(193, 193, 193, 0.4);
+        border-radius: 24px;
 
         &__stats {
             display: flex;
@@ -84,5 +87,27 @@
             width: 48px;
             height: 48px;
         }
+
+        &__done {
+            width: 24px;
+            height: 24px;
+        }
+
+        &__distance {
+            align-items: flex-start;
+        }
+
+        &__type {
+            align-items: flex-end;
+        }
     }
+}
+
+@media (min-width: 1200px) {
+    .activity {
+        &__done {
+            margin-right: 12px;
+        }
+    }
+
 }
