--- a/sass/blocks/_main-content.scss
+++ b/sass/blocks/_main-content.scss
@@ -44,3 +44,9 @@
     }
 
 }
+
+@media (max-width: 767px) {
+    .main-content {
+        padding: 24px 16px;
+    }
+}
