--- a/sass/blocks/_services.scss
+++ b/sass/blocks/_services.scss
@@ -15,7 +15,7 @@
         font-size: 16px;
         font-weight: 600;
         line-height: 22px;
-        padding-right: 22px;
+        padding-right: 39px;
     }
 
     &__text {
@@ -82,17 +82,17 @@
 
 }
 
-@media (max-width: 991px) {
-    .services {
+// @media (max-width: 991px) {
+//     .services {
 
-        &__connect-watch,
-        &__find-coach,
-        &__coach-service {
-            width: auto;
-        }
-    }
+//         &__connect-watch,
+//         &__find-coach,
+//         &__coach-service {
+//             width: auto;
+//         }
+//     }
 
-}
+// }
 
 @media (max-width: 767px) {
     .services {
